k8s/database/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: guestbook-network-policy
  namespace: guestbook
  labels:
    app: mariadb
    project: guestbook
spec:
  podSelector:
    matchLabels:
      app: mariadb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
        - podSelector:
            matchLabels:
              app: seed
        - podSelector:
            matchLabels:
              app: cleanup
      ports:
        - protocol: TCP
          port: 3306
